--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.95.0
-uvicorn==0.21.1
-pydantic==1.10.7
-numpy==1.24.3
-scikit-learn==1.2.2
-joblib==1.2.0
-python-multipart==0.0.6
-pandas==2.0.0
+fastapi>=0.95.0,<1.0.0
+uvicorn>=0.21.1,<1.0.0
+pydantic>=1.10.7,<2.0.0
+numpy>=1.22.0,<2.0.0
+scikit-learn>=1.0.2,<2.0.0
+joblib>=1.1.0,<2.0.0
+python-multipart>=0.0.6,<0.1.0
+pandas>=1.4.0,<2.0.0
