--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
-fastapi>=0.95.0,<1.0.0
-uvicorn>=0.21.1,<1.0.0
-pydantic>=1.10.7,<2.0.0
-scikit-learn>=1.0.2,<2.0.0
-joblib>=1.1.0,<2.0.0
-python-multipart>=0.0.6,<0.1.0
-pandas>=1.4.0,<2.0.0
-numpy==2.2.4
+# Core dependencies with compatible versions
+numpy==1.24.3
+pandas==2.0.2
+scikit-learn==1.2.2
+fastapi==0.95.2
+uvicorn==0.22.0
+pydantic==1.10.8
+joblib==1.2.0
+
+# Additional dependencies
+python-multipart==0.0.6
+requests==2.30.0
+matplotlib==3.7.1
+seaborn==0.12.2
+
+# For testing
+pytest==7.3.1
