--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 # Core dependencies with compatible versions
-numpy==1.22.4
-pandas==1.5.3
+numpy==1.21.6  # More stable version for Python 3.11
+pandas==1.3.5  # Compatible with numpy 1.21.6
 scikit-learn==1.0.2
 fastapi==0.95.2
 uvicorn==0.22.0
 pydantic==1.10.8
-joblib==1.2.0
+joblib==1.1.1
 
 # Additional dependencies
 python-multipart==0.0.6
-requests==2.30.0
-matplotlib==3.7.1
+requests==2.28.2
+matplotlib==3.5.3  # Compatible with older numpy
 seaborn==0.12.2
 
 # For testing
