--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core dependencies with compatible versions
-numpy==1.21.6  # More stable version for Python 3.11
-pandas==1.3.5  # Compatible with numpy 1.21.6
+numpy==1.24.3  # Compatible with Python 3.11.11
+pandas==1.5.3  # Compatible with numpy 1.24.3
 scikit-learn==1.0.2
 fastapi==0.95.2
 uvicorn==0.22.0
@@ -10,7 +10,7 @@ joblib==1.1.1
 # Additional dependencies
 python-multipart==0.0.6
 requests==2.28.2
-matplotlib==3.5.3  # Compatible with older numpy
+matplotlib==3.7.1  # Compatible with newer numpy
 seaborn==0.12.2
 
 # For testing
