--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
-# Core dependencies with compatible versions
-numpy==1.24.3  # Compatible with Python 3.11.11
-pandas==1.5.3  # Compatible with numpy 1.24.3
-scikit-learn==1.0.2
-fastapi==0.95.2
-uvicorn==0.22.0
-pydantic==1.10.8
-joblib==1.1.1
+# Core dependencies for API functionality
+fastapi>=0.95.0,<0.96.0
+uvicorn>=0.22.0,<0.23.0
+pydantic>=1.10.8,<1.11.0
+numpy>=1.21.0,<1.25.0
+pandas>=1.3.5,<1.6.0
+scikit-learn>=1.0.0,<1.1.0
+joblib>=1.1.0,<1.2.0
 
 # Additional dependencies
-python-multipart==0.0.6
-requests==2.28.2
-matplotlib==3.7.1  # Compatible with newer numpy
-seaborn==0.12.2
+python-multipart>=0.0.6
+requests>=2.28.0,<2.29.0
 
-# For testing
-pytest==7.3.1
+# Optional visualization libs (comment out if causing deployment issues)
+# matplotlib>=3.5.0,<3.8.0
+# seaborn>=0.11.0,<0.13.0
+
+# For testing (not required in production)
+# pytest>=7.3.0,<7.4.0
+
+# Gunicorn for production
+gunicorn>=20.1.0
